--- a/src/Components/Home/styles.css
+++ b/src/Components/Home/styles.css
@@ -15,3 +15,10 @@ h1 {
     margin-top: 10px;
     box-shadow: 0px 10px 13px -7px #000000
 }
+
+@media only screen and (max-width: 600px) {
+    #photo {
+        max-width: 350px;
+    }
+    
+}
