--- a/src/Components/Navbar/styles.css
+++ b/src/Components/Navbar/styles.css
@@ -7,3 +7,9 @@ background: linear-gradient(90deg, rgba(171,169,195,1) 0%, rgba(194,166,201,1) 3
 #title {
     color: white;
 }
+
+@media only screen and (max-width: 600px) {
+    #title {
+        font-size: 19px;
+    }
+}
