--- a/src/Components/Home/styles.css
+++ b/src/Components/Home/styles.css
@@ -18,8 +18,14 @@
 }
 
 h1 {    
-    margin-top: 90px;
+    
     font-size: 70px;
+}
+
+@media only screen and (min-width: 600px) {
+    h1 {
+        margin-top: 90px;
+    }
 }
 
 .btn {
